[gd_scene load_steps=7 format=2]

[ext_resource path="res://Car.gd" type="Script" id=1]
[ext_resource path="res://Camer.tscn" type="PackedScene" id=2]

[sub_resource type="CubeMesh" id=4]
size = Vector3( 1.5, 0.5, 3 )

[sub_resource type="ConvexPolygonShape" id=5]
points = PoolVector3Array( -0.7225, -0.25, -1.43083, 0.694167, 0.25, 1.37472, -0.694167, 0.25, 1.37472, 0.7225, -0.25, 1.43083, 0.694167, 0.25, -1.37472, -0.7225, -0.25, 1.43083, 0.7225, -0.25, -1.43083, -0.694167, 0.25, -1.37472 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CylinderMesh" id=7]
material = SubResource( 8 )
top_radius = 0.4
bottom_radius = 0.4
height = 0.25
radial_segments = 12

[node name="BaseCar" type="VehicleBody"]
script = ExtResource( 1 )

[node name="CarBody" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.757555, 0 )
mesh = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.757555, 0 )
shape = SubResource( 5 )

[node name="FrontLeftWheel" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.910916, -0.817532, 0.904554 )
use_as_steering = true
wheel_radius = 0.4
suspension_stiffness = 50.0
damping_compression = 1.5
damping_relaxation = 2.0
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="FrontLeftWheel"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 7 )

[node name="FrontRightWheel" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.906458, -0.817532, 0.904554 )
use_as_steering = true
wheel_radius = 0.4
suspension_stiffness = 50.0
damping_compression = 1.5
damping_relaxation = 2.0
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="FrontRightWheel"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 7 )

[node name="BackLeftWheel" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.910916, -0.817532, -0.955274 )
use_as_traction = true
wheel_radius = 0.4
suspension_stiffness = 50.0
damping_compression = 1.5
damping_relaxation = 2.0
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="BackLeftWheel"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 7 )

[node name="BackRightWheel" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.906, -0.818, -0.955 )
use_as_traction = true
wheel_radius = 0.4
suspension_stiffness = 50.0
damping_compression = 1.5
damping_relaxation = 2.0
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="BackRightWheel"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 7 )

[node name="CamerPivot" parent="." instance=ExtResource( 2 )]
